Updating base URL

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Airspace for Hugo"
-baseURL = "https://www.example.com"
+baseURL = "https://practical-wright-05bc95.netlify.com"
 languageCode = "en-us"
 theme = "mine"
 
