--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-title = "Airspace for Hugo"
+title = "De klif"
 baseURL = "https://practical-wright-05bc95.netlify.com/"
 languageCode = "en-us"
 theme = "mine"
@@ -7,8 +7,8 @@ theme = "mine"
 
   [[menu.header]]
     weight = 2
-    name = "Work"
-    url = "/work"
+    name = "Foto's"
+    url = "/fotos"
   [[menu.header]]
     weight = 3
     name = "Blog"
@@ -56,7 +56,7 @@ theme = "mine"
 
   [params.slider]
     enable = true
-    title = "DE KLIP"
+    title = "DE KLIF"
     subtitle = "Genieten in de Panne"
 
   [params.wrapper]
