Contact page gewijzigd

--- a/data/index.yml
+++ b/data/index.yml
@@ -5,31 +5,31 @@ subtitle: Don’t just take our word for it. Check out some of our latest work.
 fotos:
   - url: "#"
     image: "/img/fotos/zwembad.jpg"
-    name: Zwembad
+    name: --
     description: >
-      Labore et dolore magna aliqua. Ut enim ad
+      
   - url: "#"
     image: "/img/fotos/6.jpg"
-    name: Tesla Motors
+    name: --
     description: >
-      Labore et dolore magna aliqua. Ut enim ad
+      
   - url: "#"
     image: "/img/fotos/12.jpg"
-    name: Tesla Motors
+    name: --
     description: >
-      Labore et dolore magna aliqua. Ut enim ad
+      
   - url: "#"
     image: "/img/fotos/15.jpg"
-    name: Tesla Motors
+    name: --
     description: >
-      Labore et dolore magna aliqua. Ut enim ad
+      
   - url: "#"
     image: "/img/fotos/16.jpg"
-    name: Tesla Motors
+    name: --
     description: >
-      Labore et dolore magna aliqua. Ut enim ad
+      
   - url: "#"
     image: "/img/fotos/23.jpg"
-    name: Tesla Motors
+    name: --
     description: >
-      Labore et dolore magna aliqua. Ut enim ad
+      
