--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-title = "De klif"
+title = "De Klif"
 baseURL = "https://practical-wright-05bc95.netlify.com/"
 languageCode = "en-us"
 theme = "mine"
