--- a/data/fotos.yml
+++ b/data/fotos.yml
@@ -1,60 +1,35 @@
 enable: true
-title: Just some of our latest projects.
-subtitle: Don’t just take our word for it. Check out some of our latest work.
+title: Foto's
+subtitle:
 
-portfolio:
+all:
   - category: Branding
     url: "#"
-    image: "/img/portfolio/work1.jpg"
+    image: "/img/fotos/6.jpg"
     name: Tesla Motors
     description: >
       Labore et dolore magna aliqua. Ut enim ad
   - category: Websites
     url: "#"
-    image: "/img/portfolio/work1.jpg"
+    image: "/img/fotos/7.jpg"
     name: Tesla Motors
     description: >
       Labore et dolore magna aliqua. Ut enim ad
   - category: Graphics
     url: "#"
-    image: "/img/portfolio/work2.jpg"
+    image: "/img/fotos/8.jpg"
     name: Tesla Motors
     description: >
       Labore et dolore magna aliqua. Ut enim ad
   - category: Design
     url: "#"
-    image: "/img/portfolio/work3.jpg"
+    image: "/img/fotos/9.jpg"
     name: Tesla Motors
     description: >
       Labore et dolore magna aliqua. Ut enim ad
   - category: Video
     url: "#"
-    image: "/img/portfolio/work4.jpg"
+    image: "/img/fotos/10.jpg"
     name: Tesla Motors
     description: >
       Labore et dolore magna aliqua. Ut enim ad
-clients:
-  - image: "/img/clients/clients-logo1.png"
-    url: "#"
-  - image: "/img/clients/clients-logo2.png"
-    url: "#"
-  - image: "/img/clients/clients-logo3.png"
-    url: "#"
-  - image: "/img/clients/clients-logo4.png"
-    url: "#"
-  - image: "/img/clients/clients-logo5.png"
-    url: "#"
-  - image: "/img/clients/clients-logo4.png"
-    url: "#"
-  - image: "/img/clients/clients-logo3.png"
-    url: "#"
-  - image: "/img/clients/clients-logo2.png"
-    url: "#"
-  - image: "/img/clients/clients-logo1.png"
-    url: "#"
-  - image: "/img/clients/clients-logo2.png"
-    url: "#"
-  - image: "/img/clients/clients-logo3.png"
-    url: "#"
-  - image: "/img/clients/clients-logo4.png"
-    url: "#"
