Layout aangepast van middelste blok op home pagina. Config aangepast naar www.deklif.be

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "De Klif"
-baseURL = "https://practical-wright-05bc95.netlify.com/"
+baseURL = "https://www.deklif.be/"
 languageCode = "en-us"
 theme = "mine"
 
