Thumbnail worden geladen op de foto's pagina. Enkel bij bekijken van foto's wordt de volledige foto geladen.

--- a/data/fotos.yml
+++ b/data/fotos.yml
@@ -5,73 +5,109 @@ subtitle:
 all:
 - url: "#"
   image: "img/fotos/165.jpg"
+  thumbnail: "img/fotos/thumb.165.jpg"
 - url: "#"
   image: "img/fotos/115.jpg"
+  thumbnail: "img/fotos/thumb.115.jpg"
 - url: "#"
   image: "img/fotos/11.jpg"
+  thumbnail: "img/fotos/thumb.11.jpg"
 - url: "#"
   image: "img/fotos/120.jpg"
+  thumbnail: "img/fotos/thumb.120.jpg"
 - url: "#"
   image: "img/fotos/127.jpg"
+  thumbnail: "img/fotos/thumb.127.jpg"
 - url: "#"
   image: "img/fotos/129.jpg"
+  thumbnail: "img/fotos/thumb.129.jpg"
 - url: "#"
   image: "img/fotos/12.jpg"
+  thumbnail: "img/fotos/thumb.12.jpg"
 - url: "#"
   image: "img/fotos/130.jpg"
+  thumbnail: "img/fotos/thumb.130.jpg"
 - url: "#"
   image: "img/fotos/132.jpg"
+  thumbnail: "img/fotos/thumb.132.jpg"
 - url: "#"
   image: "img/fotos/133.jpg"
+  thumbnail: "img/fotos/thumb.133.jpg"
 - url: "#"
   image: "img/fotos/13.jpg"
+  thumbnail: "img/fotos/thumb.13.jpg"
 - url: "#"
   image: "img/fotos/140.jpg"
+  thumbnail: "img/fotos/thumb.140.jpg"
 - url: "#"
   image: "img/fotos/143.jpg"
+  thumbnail: "img/fotos/thumb.143.jpg"
 - url: "#"
   image: "img/fotos/144.jpg"
+  thumbnail: "img/fotos/thumb.144.jpg"
 - url: "#"
   image: "img/fotos/147.jpg"
+  thumbnail: "img/fotos/thumb.147.jpg"
 - url: "#"
   image: "img/fotos/15.jpg"
+  thumbnail: "img/fotos/thumb.15.jpg"
 - url: "#"
   image: "img/fotos/160.jpg"
+  thumbnail: "img/fotos/thumb.160.jpg"
 - url: "#"
   image: "img/fotos/16.jpg"
+  thumbnail: "img/fotos/thumb.16.jpg"
 - url: "#"
   image: "img/fotos/175.jpg"
+  thumbnail: "img/fotos/thumb.175.jpg"
 - url: "#"
   image: "img/fotos/178.jpg"
+  thumbnail: "img/fotos/thumb.178.jpg"
 - url: "#"
   image: "img/fotos/21.jpg"
+  thumbnail: "img/fotos/thumb.21.jpg"
 - url: "#"
   image: "img/fotos/24.jpg"
+  thumbnail: "img/fotos/thumb.24.jpg"
 - url: "#"
   image: "img/fotos/25.jpg"
+  thumbnail: "img/fotos/thumb.25.jpg"
 - url: "#"
   image: "img/fotos/27.jpg"
+  thumbnail: "img/fotos/thumb.27.jpg"
 - url: "#"
   image: "img/fotos/28.jpg"
+  thumbnail: "img/fotos/thumb.28.jpg"
 - url: "#"
   image: "img/fotos/32.jpg"
+  thumbnail: "img/fotos/thumb.32.jpg"
 - url: "#"
   image: "img/fotos/36.jpg"
+  thumbnail: "img/fotos/thumb.36.jpg"
 - url: "#"
   image: "img/fotos/42.jpg"
+  thumbnail: "img/fotos/thumb.42.jpg"
 - url: "#"
   image: "img/fotos/43.jpg"
+  thumbnail: "img/fotos/thumb.43.jpg"
 - url: "#"
   image: "img/fotos/47.jpg"
+  thumbnail: "img/fotos/thumb.47.jpg"
 - url: "#"
   image: "img/fotos/49.jpg"
+  thumbnail: "img/fotos/thumb.49.jpg"
 - url: "#"
   image: "img/fotos/54.jpg"
+  thumbnail: "img/fotos/thumb.54.jpg"
 - url: "#"
   image: "img/fotos/6.jpg"
+  thumbnail: "img/fotos/thumb.6.jpg"
 - url: "#"
   image: "img/fotos/7.jpg"
+  thumbnail: "img/fotos/thumb.7.jpg"
 - url: "#"
   image: "img/fotos/8.jpg"
+  thumbnail: "img/fotos/thumb.8.jpg"
 - url: "#"
   image: "img/fotos/zwembad.jpg"
+  thumbnail: "img/fotos/thumb.zwembad.jpg"
