Updated base url

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "De Klif"
-baseURL = "https://www.deklif.be/"
+baseURL = "https://practical-wright-05bc95.netlify.app/"
 languageCode = "en-us"
 theme = "mine"
 
